--- a/app/index.html
+++ b/app/index.html
@@ -13,8 +13,6 @@
     <link href="css/blog.css" type="text/css" rel="stylesheet">
     <link href="css/bootstrap.min.css" type="text/css" rel="stylesheet">
     <link href="css/responsive.css" type="text/css" rel="stylesheet">
-    <link href="css/owl.carousel.min.css" type="text/css" rel="stylesheet">
-    <link href="css/owl.theme.default.min.css" type="text/css" rel="stylesheet">
     <link href="css/custom.css" type="text/css" rel="stylesheet">
 </head>
 
@@ -932,21 +930,129 @@
 
                 <div class="portfolio__slider">
 
-                    <div class="owl-carousel owl-theme">
-                        <div class="item"><h4>1</h4></div>
-                        <div class="item"><h4>2</h4></div>
-                        <div class="item"><h4>3</h4></div>
-                        <div class="item"><h4>4</h4></div>
-                        <div class="item"><h4>5</h4></div>
-                        <div class="item"><h4>6</h4></div>
-                        <div class="item"><h4>7</h4></div>
-                        <div class="item"><h4>8</h4></div>
-                        <div class="item"><h4>9</h4></div>
-                        <div class="item"><h4>10</h4></div>
-                        <div class="item"><h4>11</h4></div>
-                        <div class="item"><h4>12</h4></div>
+                    <div class="portfolio__carousel owl-carousel owl-theme">
+                        <div class="item">
+                            <a href="" class="portfolio__slide">
+                               <img class="portfolio__slide-img" src="img/portfolio1.jpg" alt=""> 
+                               <span class="portfolio__slide-name">Установка СКУД в банке (?)</span>
+                               <div class="portfolio__hover">
+                                   <div class="portfolio__hover-dots">
+                                       <i></i>
+                                       <i></i>
+                                       <i></i>
+                                   </div>
+                                   <div class="portfolio__hover-more">Подробнее</div>
+                               </div>
+                            </a><!-- portfolio__slide -->
+                        </div>
+
+                         <div class="item">
+                            <a href="" class="portfolio__slide">
+                               <img class="portfolio__slide-img" src="img/portfolio1.jpg" alt=""> 
+                               <span class="portfolio__slide-name">Установка СКУД в банке (?)</span>
+                               <div class="portfolio__hover">
+                                   <div class="portfolio__hover-dots">
+                                       <i></i>
+                                       <i></i>
+                                       <i></i>
+                                   </div>
+                                   <div class="portfolio__hover-more">Подробнее</div>
+                               </div>
+                            </a><!-- portfolio__slide -->
+                        </div>
+
+                         <div class="item">
+                            <a href="" class="portfolio__slide">
+                               <img class="portfolio__slide-img" src="img/portfolio1.jpg" alt=""> 
+                               <span class="portfolio__slide-name">Установка СКУД в банке (?)</span>
+                               <div class="portfolio__hover">
+                                   <div class="portfolio__hover-dots">
+                                       <i></i>
+                                       <i></i>
+                                       <i></i>
+                                   </div>
+                                   <div class="portfolio__hover-more">Подробнее</div>
+                               </div>
+                            </a><!-- portfolio__slide -->
+                        </div>
+
+                         <div class="item">
+                            <a href="" class="portfolio__slide">
+                               <img class="portfolio__slide-img" src="img/portfolio1.jpg" alt=""> 
+                               <span class="portfolio__slide-name">Установка СКУД в банке (?)</span>
+                               <div class="portfolio__hover">
+                                   <div class="portfolio__hover-dots">
+                                       <i></i>
+                                       <i></i>
+                                       <i></i>
+                                   </div>
+                                   <div class="portfolio__hover-more">Подробнее</div>
+                               </div>
+                            </a><!-- portfolio__slide -->
+                        </div>
+
+                         <div class="item">
+                            <a href="" class="portfolio__slide">
+                               <img class="portfolio__slide-img" src="img/portfolio1.jpg" alt=""> 
+                               <span class="portfolio__slide-name">Установка СКУД в банке (?)</span>
+                               <div class="portfolio__hover">
+                                   <div class="portfolio__hover-dots">
+                                       <i></i>
+                                       <i></i>
+                                       <i></i>
+                                   </div>
+                                   <div class="portfolio__hover-more">Подробнее</div>
+                               </div>
+                            </a><!-- portfolio__slide -->
+                        </div>
+
+                         <div class="item">
+                            <a href="" class="portfolio__slide">
+                               <img class="portfolio__slide-img" src="img/portfolio1.jpg" alt=""> 
+                               <span class="portfolio__slide-name">Установка СКУД в банке (?)</span>
+                               <div class="portfolio__hover">
+                                   <div class="portfolio__hover-dots">
+                                       <i></i>
+                                       <i></i>
+                                       <i></i>
+                                   </div>
+                                   <div class="portfolio__hover-more">Подробнее</div>
+                               </div>
+                            </a><!-- portfolio__slide -->
+                        </div>
+
+                         <div class="item">
+                            <a href="" class="portfolio__slide">
+                               <img class="portfolio__slide-img" src="img/portfolio1.jpg" alt=""> 
+                               <span class="portfolio__slide-name">Установка СКУД в банке (?)</span>
+                               <div class="portfolio__hover">
+                                   <div class="portfolio__hover-dots">
+                                       <i></i>
+                                       <i></i>
+                                       <i></i>
+                                   </div>
+                                   <div class="portfolio__hover-more">Подробнее</div>
+                               </div>
+                            </a><!-- portfolio__slide -->
+                        </div>
+
+                         <div class="item">
+                            <a href="" class="portfolio__slide">
+                               <img class="portfolio__slide-img" src="img/portfolio1.jpg" alt=""> 
+                               <span class="portfolio__slide-name">Установка СКУД в банке (?)</span>
+                               <div class="portfolio__hover">
+                                   <div class="portfolio__hover-dots">
+                                       <i></i>
+                                       <i></i>
+                                       <i></i>
+                                   </div>
+                                   <div class="portfolio__hover-more">Подробнее</div>
+                               </div>
+                            </a><!-- portfolio__slide -->
+                        </div>
+                       
                     </div>
-                        portfolio slider here
+                       
                     </div><!-- portfolio__slider -->
             </div><!-- container -->
         </div><!-- portfolio -->
