--- a/app/index.html
+++ b/app/index.html
@@ -1129,7 +1129,7 @@
                                 У нас можно заказать монтаж систем контроля доступа и проектирование ее с нуля, а также дополнить или частично обновить уже существующую систему. Кроме того, мы выполняем установку других охранных систем, которые можно интегрировать вместе со СКУД и значительно повысить уровень безопасности на территории.
                             </div><!-- proposal__block-text -->
 
-                            <i class="proposal__icon"><svg width="51" height="51"><use xlink:href="svg/symbols.svg#mont"></use></svg></i>
+                            <i class="proposal__icon"><img src="img/mont.png" alt=""></i>
                         </div><!-- proposal__block -->
                     </div><!-- col-md-3 -->
 
@@ -1143,7 +1143,7 @@
                             Мы предлагаем большой выбор товаров большинства известных брендов и выгодные цены на всю продукцию. На все установленное нами оборудование по окончанию работ, вы получите гарантию, которая распространяется и на монтаж.
                         </div><!-- proposal__block-text -->
 
-                        <i class="proposal__icon"><svg width="47" height="53"><use xlink:href="svg/symbols.svg#guarant"></use></svg></i>
+                        <i class="proposal__icon"><img src="img/garant.png" alt=""></i>
                     </div><!-- proposal__block -->
                    </div><!-- col-md-4 -->
 
@@ -1157,7 +1157,7 @@
                             Для поддержания уже установленной СКД, мы предлагаем вам абонентское обслуживание, в которое будет входить наладка оборудования, консультации, инструктаж, не гарантийный ремонт установка дополнительного и обновление старого программного обеспечения. Это поможет вам значительно сэкономить на дальнейших вызовах ремонтных служб.
                         </div><!-- proposal__block-text -->
 
-                        <i class="proposal__icon"><svg width="57" height="57"><use xlink:href="svg/symbols.svg#service"></use></svg></i>
+                        <i class="proposal__icon"><img src="img/service.png" alt=""></i>
                     </div><!-- proposal__block -->
                     </div><!-- col-md-4 -->
                 </div><!-- proposal__wrapper -->
@@ -1325,7 +1325,7 @@
                     <div class="col-md-4 col-sm-4">
                         <div class="protect__block">
                             <div class="protect__block-image">
-                                <svg width="99" height="99"><use xlink:href="svg/symbols.svg#thief"></use></svg>
+                                <img width="99" height="99" src="img/thief.png" />
                             </div><!-- protect__block-image -->
 
                             <div class="protect__block-name">
@@ -1337,7 +1337,7 @@
                     <div class="col-md-4 col-sm-4">
                         <div class="protect__block">
                             <div class="protect__block-image">
-                                <svg width="111" height="99"><use xlink:href="svg/symbols.svg#personal"></use></svg>
+                                <img width="111" height="97" src="img/personal.png">
                             </div><!-- protect__block-image -->
 
                             <div class="protect__block-name">
@@ -1349,7 +1349,7 @@
                     <div class="col-md-4 col-sm-4">
                         <div class="protect__block">
                             <div class="protect__block-image">
-                                <svg width="99" height="99"><use xlink:href="svg/symbols.svg#ment"></use></svg>
+                                <img width="99" height="99" src="img/control.png">
                             </div><!-- protect__block-image -->
 
                             <div class="protect__block-name">
@@ -1394,7 +1394,7 @@
                 <div class="steps__wrapper">
                     <div class="steps__block">
                         <div class="steps__block-img">
-                            <svg width="46" height="31"><use xlink:href="svg/symbols.svg#bus"></use></svg>
+                            <img width="46" height="31" src="img/bus.png">
                         </div><!-- steps__block-img -->
                         <div class="steps__block-name">
                             Выезд на <br>объект
@@ -1403,7 +1403,7 @@
 
                     <div class="steps__block">
                         <div class="steps__block-img">
-                            <svg width="42" height="47"><use xlink:href="svg/symbols.svg#view"></use></svg>
+                            <img width="42" height="47" src="img/view.png">
                         </div><!-- steps__block-img -->
                         <div class="steps__block-name">
                             Осмотр <br>объекта
@@ -1412,7 +1412,7 @@
 
                     <div class="steps__block">
                         <div class="steps__block-img">
-                            <svg width="58" height="54"><use xlink:href="svg/symbols.svg#project"></use></svg>
+                            <img width="58" height="54" src="img/project.png">
                         </div><!-- steps__block-img -->
                         <div class="steps__block-name">
                             Проектирование <br>СКУД
@@ -1421,7 +1421,7 @@
 
                     <div class="steps__block">
                         <div class="steps__block-img">
-                            <svg width="61" height="38"><use xlink:href="svg/symbols.svg#hands"></use></svg>
+                            <img width="61" height="38"  src="img/hands.png">
                         </div><!-- steps__block-img -->
                         <div class="steps__block-name">
                             Согласование <br>с заказчиком
@@ -1430,7 +1430,7 @@
 
                     <div class="steps__block">
                         <div class="steps__block-img">
-                            <svg width="54" height="55"><use xlink:href="svg/symbols.svg#key"></use></svg>
+                            <img width="54" height="55" src="img/key.png">
                         </div><!-- steps__block-img -->
                         <div class="steps__block-name">
                             Монтаж и <br>настройка <br>системы
@@ -1439,7 +1439,7 @@
 
                     <div class="steps__block">
                         <div class="steps__block-img">
-                            <svg width="50" height="52"><use xlink:href="svg/symbols.svg#test"></use></svg>
+                            <img width="50" height="52" src="img/test.png">
                         </div><!-- steps__block-img -->
                         <div class="steps__block-name">
                             Тестирование
@@ -1448,7 +1448,7 @@
 
                     <div class="steps__block">
                         <div class="steps__block-img">
-                            <svg width="58" height="41"><use xlink:href="svg/symbols.svg#final"></use></svg>
+                            <img width="58" height="41" src="img/final.png">
                         </div><!-- steps__block-img -->
                         <div class="steps__block-name">
                             Сдача <br>объекта
@@ -1457,7 +1457,7 @@
 
                     <div class="steps__block">
                         <div class="steps__block-img">
-                            <svg width="46" height="43"><use xlink:href="svg/symbols.svg#instruction"></use></svg>
+                            <img width="46" height="43" src="img/instruction.png">
                         </div><!-- steps__block-img -->
                         <div class="steps__block-name">
                             Инструктаж
@@ -1466,7 +1466,7 @@
 
                     <div class="steps__block">
                         <div class="steps__block-img">
-                            <svg width="53" height="54"><use xlink:href="svg/symbols.svg#consult"></use></svg>
+                            <img width="53" height="54" src="img/consult.png">
                         </div><!-- steps__block-img -->
                         <div class="steps__block-name">
                             Консультации по <br>эксплуатации
