--- a/app/home.html
+++ b/app/home.html
@@ -908,6 +908,9 @@
                           <a href="#"><img class="carousel-image" alt="Image Caption" src="img/hslide3.jpg"></a>
                         </div>
                       </div><!-- carousel-container -->
+
+                      <div id="carousel-left"><img src="img/arr-left.png" alt=""></div>
+                      <div id="carousel-right"><img src="img/arr-right.png" alt=""></div>
                     
                     </div>
                 <!-- END MAIN SLIDER -->
